Fixed the Your Answers not showing up

--- a/RadialReview/Content/Site.css
+++ b/RadialReview/Content/Site.css
@@ -1195,3 +1195,13 @@ color: #559DC5;
 .collapseIcon {
 
 }
+
+
+.hover {
+    opacity: .6;
+    transition: opacity .2s ease;
+}
+
+.hover:hover {
+    opacity: 1;
+}
